Fix My Tasks: narrower modal, parallel loading, auto-close sidebar on mobile

--- a/style.css
+++ b/style.css
@@ -1917,8 +1917,8 @@ body.light-mode .file-preview-container {
 
 /* My Tasks Modal */
 .my-tasks-modal-content {
-    max-width: 700px;
-    width: 100%;
+    max-width: 550px;
+    width: 90%;
 }
 
 .my-tasks-content {
